copied personal site as template

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 <body>
     <div class='main'>
-    <h1>Ayman Mohamed</h1>
-    <header>
-    <nav class="menu">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="Contact">Contact</a></li>
-        </ul>
-    </nav>   
-    </header> 
+        <h1>Ayman Mohamed</h1>
+        <header>
+        <nav class="nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="Contact">Contact</a></li>
+            </ul>
+        </nav>
+    </div>   
+        </header> 
    <main>
-    <a href = about.html> Here Is My About Me Page</a>
     <p>Courses:
         <ul>
     <li>Fundamental Web Technologies (ACIT-1620)</li>
