removed ul and added br

--- a/index.html
+++ b/index.html
@@ -24,18 +24,15 @@
     </div>   
         </header> 
    <main>
-    <p>Courses:
-        <ul>
-    <li>Fundamental Web Technologies (ACIT-1620)</li>
-    <li>Business Communications (COMM-1116)</li>
-    <li>Technical Math for IT (MATH-1310)</li>
-    <li>Database Systems (ACIT-1630)</li>
-    <li>Scripting For IT (ACIT-1515)</li>
-    <li>Organizational Behaviour (ORGB-1100)</li>
-    <li>Intro to Systems Admin (ACIT-1420)</li>
-        </ul>
-    </p>
-        <ul>
-   </main> 
+            <p>Courses:<br> Fundamental Web Technologies (ACIT-1620) <br>
+                Business Communications (COMM-1116) <br>
+                Technical Math for IT (MATH-1310) <br>
+                Database Systems (ACIT-1630) <br>
+                Scripting For IT (ACIT-1515) <br>
+                Organizational Behaviour (ORGB-1100) <br>
+                Intro to Systems Admin (ACIT-1420) <br>
+            </p>
+    
+        </main> 
 </body>
 </html>
