changed nav class name and removed ul from nav

--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="samplestyle.css">
     <title>Week 8 Lab</title>
 </head>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 <body>
-    <div class='main'>
-        <h1>Ayman Mohamed</h1>
+    <div class="outer">
         <header>
-        <nav class="nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Me</a></li>
-                <li><a href="Contact">Contact</a></li>
-            </ul>
-        </nav>
-    </div>   
+            <h1>Ayman Mohamed</h1> 
+            <nav class="navbar">
+
+                <a href='index.html'>Home</a>
+                <a href='about.html'>About Me</a>
+                <a href='#'>Contact Me</a> 
+                
+            </nav>
+        </header>    
+    </div>
         </header> 
    <main>
             <p>Courses:<br> Fundamental Web Technologies (ACIT-1620) <br>
